compromised_k8s_node/ip_enumeration/deployment2_honeypod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tigera-internal-3 
  namespace: tigera-internal
spec:
  selector:
    matchLabels:
      app: tigera-internal-3
  replicas: 1
  template:
    metadata:
      labels:
        run: tigera-internal-3
    spec:
      containers:
      - name: tigera-internal-3
        image: alpine:latest
