compromised_k8s_node/ip_enumeration/honeypod_node_ip_enumeration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tigera-internal-5 
  namespace: tigera-internal
spec:
  selector:
    matchLabels:
      app: tigera-internal-5
  replicas: 1
  template:
    metadata:
      labels:
        run: tigera-internal-5
    spec:
      containers:
      - name: tigera-internal-5
        image: alpine:latest
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: tigera-internal-5
spec:
  tier: tigera-internal
  order: 0
  selector: app == "tigera-internal-5"
  namespaceSelector: ''
  serviceAccountSelector: ''
  ingress:
    - action: Deny
      source: {}
      destination: {}
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
---
