compromised_k8s_node/ip_enumeration/policy_node_honeypod.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: tigera-internal-3
spec:
  tier: tigera-internal
  order: 0
  selector: app == "tigera-internal-3"
  namespaceSelector: ''
  serviceAccountSelector: ''
  ingress:
    - action: Deny
      source: {}
      destination: {}
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
